--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
     <main>
       <h2>Home</h2>
       <p>
-        This is a simple example of an HTML page structure. You can add more
-        content here and customize it to fit your needs.
+        This is a smaple website for chatbot testing
       </p>
     </main>
 
